# django-async-job-pipelines

./: .gitignore  LICENSE  README.md  pyproject.toml
django_async_job_pipelines/: admin.py  apps.py  db_layer.py  jobs.py  models.py
django_async_job_pipelines/management/commands/: start_consumer.py
djjp/blah/: js.py  tests.py
djjp/blah/management/commands/: check_jobs.py  make_tasks.py
djjp/djjp/: settings.py
djjp/que/: admin.py  jobs.py  models.py
djjp/que/management/commands/: start_consumer.py
djjp/que/migrations/: 0001_initial.py
