[project]
name = "djjp-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-click>=2.4.1",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "rich>=14.2.0",
]
