[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-async-job-pipelines"
version = "0.1.0"
description = "The simplest way to create background jobs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build>=1.3.0",
    "django>=5.2.7",
 "django-click>=2.4.1",
]
license = "BSD-3-Clause"
authors = [{ name = "Mikaeil Orfanian", email = "subsmokt@outlook.com" }]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[dependency-groups]
dev = ["isort>=7.0.0", "pytest>=8.4.2", "pytest-django>=4.11.1", "rich>=14.2.0"]

[project.urls]
Homepage = "https://github.com/sadeh-congnition/django-async-job-pipelines"
